--- a/index.html
+++ b/index.html
@@ -7,5 +7,75 @@
     <script src="./main.js" defer></script>
     <title>Navbar</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="nav-center">
+          <div class="logo"><img src="./logo.svg" alt="Coding Addict" /></div>
+          <div class="burger"></div>
+          <nav class="nav">
+            <ul class="menu">
+              <li class="menu-item">
+                <a href="#" class="item-link">Home</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="item-link">About</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="item-link">Projects</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="item-link">Contact</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="social">
+            <ul class="social-items">
+              <li class="social-item">
+                <a href="#" class="social-link">
+                  <img
+                    src="./images/Facebook_icon-icons.com_66805.png"
+                    alt="Facebook"
+                  />
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-link">
+                  <img
+                    src="./images/Twitter_icon-icons.com_66803.png"
+                    alt="Twitter"
+                  />
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-link">
+                  <img
+                    src="./images/be-letter-brand_icon-icons.com_59306.png"
+                    alt="be letter"
+                  />
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-link">
+                  <img
+                    src="./images/linkedin_socialnetwork_17441.png"
+                    alt="linkedin"
+                  />
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="#" class="social-link">
+                  <img src="./images/diamond_115242.png" alt="diamond" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </header>
+      <main class="main">
+        <div class="main-block"></div>
+      </main>
+      <footer class="footer">footer</footer>
+    </div>
+  </body>
 </html>
